--- a/test_data/test_config_basic_tests/nextflow.config
+++ b/test_data/test_config_basic_tests/nextflow.config
@@ -4,36 +4,36 @@ includeConfig "prscsx.config"
 // change these parameters as needed
 profiles {
     non_docker_dev {
-        process.executor = 'local'
+        process.executor = awsbatch-or-lsf-or-slurm-etc
     }
 
     standard {
-        process.executor = 'local'
+        process.executor = awsbatch-or-lsf-or-slurm-etc
         process.container = 'pennbiobank/prscsx:latest'
         docker.enabled = true
     }
     cluster {
-        process.executor = 'lsf'
+        process.executor = awsbatch-or-lsf-or-slurm-etc
         process.queue = 'epistasis_normal'
         process.memory = '30GB'
         process.container = 'prscsx.sif'
         singularity.enabled = true
-        singularity.runOptions = '-B /project/,/static/'
+        singularity.runOptions = '-B /root/,/directory/,/names/'
     }
 
     all_of_us {
-        process.executor = 'google-lifesciences'
+        process.executor = awsbatch-or-lsf-or-slurm-etc
         process.memory = '15GB'
         process.container = 'gcr.io/ritchie-aou-psom-9015/prscsx:latest'
         google.zone = "us-central1-a"
-        google.project = 'terra-vpc-sc-bb404549' // change to your project id
+        google.project = terra project id
         google.lifeSciences.debug = true
         google.lifeSciences.network = "network"
         google.lifeSciences.subnetwork = "subnetwork"
         google.lifeSciences.usePrivateAddress = false
-        google.lifeSciences.serviceAccountEmail = 'pet-2666723902222ba8b8580@terra-vpc-sc-bb404549.iam.gserviceaccount.com' // change to your service email
+        google.lifeSciences.serviceAccountEmail = service@email.gservicaaccount.com
         google.lifeSciences.copyImage = "gcr.io/google.com/cloudsdktool/cloud-sdk:alpine"
         google.enableRequesterPaysBuckets = true
-        workDir='gs://fc-secure-f3e7d01e-18fa-40ba-bb3e-4d7497ba7d5b/work/' // change to your working directory in your workspace bucket
+        workDir = /path/to/workdir/ // can be gs://
     }
 }
